[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-runner"
version = "0.1.0"
description = "Lightweight HTTP API that executes Claude CLI tasks on behalf of Home Assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp-proto-http>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-httpx>=0.46b0",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27.0"]

[project.scripts]
claude-runner = "claude_runner.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_runner"]
